--- a/hip.css
+++ b/hip.css
@@ -26,7 +26,7 @@ h3 {
 
 .rubrik {
     font-size: 2rem;
-    color: green;
+    color: #197153;
     text-decoration-line: underline;
 }
 
@@ -49,7 +49,7 @@ nav {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(32, 82, 21);
+    background-color: #065446;
     display: flex;
     
 }
